@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: June 1, 2008</p>
+      <p>Last Updated: June 3, 2008</p>
     </td>
   </tr>
 </table>
@@ -1019,6 +1019,10 @@ buildroot-0.1.0 2007-03-09 &lt;spudmonkey@racsa.co.cr&gt
 
 <pre><ul>
 nuttx-0.3.12 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
+
+	* Improved solution to POSIX timer lifetime controls bug fixed in 0.3.11.
+	* Add test for recursive mutexes
+	* Correct bug in recursive mutex logic
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
